@@ -1,3 +1,8 @@
+2000-05-05  Dave Peticolas  <peticola@cs.ucdavis.edu>
+
+	* src/gnome/window-reconcile.c: print different currencies
+	correctly. Print reconciled balance so far.
+
 2000-05-04  Dave Peticolas  <peticola@cs.ucdavis.edu>
 
 	* src/gnome/window-main.c (gnc_main_create_toolbar): removed the
